tests/ui/traits/error-reporting/where-clause-with-bad-path.stderr
error[E0412]: cannot find type `Path` in this scope
  --> $DIR/where-clause-with-bad-path.rs:3:17
   |
LL | fn foo<T: AsRef<Path>>(filename: T) {
   |                 ^^^^ not found in this scope
   |
help: consider importing this struct
   |
LL + use std::path::Path;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0412`.
